# ml-reactions

cpp/: Make.ml-betadecay  Make.ml-starkiller
cpp/betadecay_cmake/: CMakeLists.txt
cpp/betadecay_example/: README  beta_decay.ipynb  inputs  main.cpp
cpp/betadecay_makefile/: GNUmakefile  Make.ml-betadecay  Make.package  beta_decay.ipynb  inputs  main.cpp
cpp/starkiller/: GNUmakefile  Make.package  README  convert.py  example_model.pt  inputs  main.cpp  probin  starkiller.H  starkiller.cpp  ts_model.pt
cpp/torchscript/: GNUmakefile  README  beta_decay.ipynb  inputs  main.cpp
examples/: Autograd-Math.ipynb  Autograd-Through-Net.ipynb  Beta-Decay.ipynb  Nonlinear-Regression.ipynb  neuralodes-betadecay.ipynb
maestroflame/: .gitignore  LICENSE.txt  README.md  driver.py  driver_pinn.py  driver_pinn_clean.py  driver_testing.py  hyperparamter_optimization.py  losses.py  networks.py  plotting.py  reactdataset2.py  requirements.txt  setup.py
maestroflame/examples/: Julia_plotting.ipynb  batch.sh  getting_started.ipynb  test_igsimple.py
maestroflame/maestroflame/: hyperparamter_optimization.py  losses.py  (+8 more)
pynucastro_cno/: BurnTemperatureVariations.py  NuclearRecationsSimplifiedNeuralNetwork.ipynb  burn.py  cno_rhs.py  cno_rhs_x.py
starkiller/: NetTraining.py  Reactions-Integration.ipynb  ReactionsSystem.py  StarKiller.ipynb  StarKiller_extended.ipynb  TrainingHistory.py  analyze.py  train_starkiller_model.py
starkiller2/: ReactionsDataset.py  ReactionsNet.py  ReactionsSystem.py  StarKillerMicrophysics.py  starkiller_batch.ipynb  starkiller_modular.ipynb
(+5 files in other folders)
